--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ProjectActivity"></activity>
+        <activity android:name=".ProjectsActivity"></activity>
     </application>
 
 </manifest>
