--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity android:name=".ProjectActivity"></activity>
         <activity android:name=".ProjectsActivity"></activity>
+        <activity android:name=".ProjectsFromJuriesActivity"></activity>
     </application>
 
 </manifest>
